--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     <nav class="nav d-flex justify-content-around align-items-center bg flex-row">
         <div class="d-flex justify-content-evenly gap-3 align-items-center">
           <a class="navbar-brand" href="#">
-            <img src="./images/linkedinLogo.png" alt="LinkedIn" width="30" height="30">
+            <img src="logo.png" alt="" width="40" height="30">
           </a>
           <div class="input-group">
             <span class="input-group-text " id="basic-addon1"><i class="fa-solid fa-magnifying-glass"></i></span>
